# usersnack

./: .env.local  .env.prod  .env.sample  .env.test  .gitignore  Caddyfile  Dockerfile  README.md  conftest.py  docker-compose.yml  pyproject.toml
fixtures/: pizza_extras.json  pizzas.json
migrations/models/: 0_20240324103748_init.py  1_20240320232544_initial.py  1_20240324113246_order_quantity.py  2_20240324115240_pizza_extra_quantity.py
scripts/: entrypoint-api.sh  format.sh  lint.sh  load_fixtures.py  prestart.py
src/: deps.py  error_codes.py  exception_handlers.py  exceptions.py  fixture_utils.py  main.py  schemas.py  settings.py
src/db_models/: __init__.py  orders.py  snacks.py
src/factories/: orders_factory.py
src/repositories/: base.py  orders_repo.py  snacks_repo.py
src/repositories/tests/: test_orders_repo.py
src/routes/tests/: test_orders_route.py  test_pizzas_route.py
src/routes/v1/: __init__.py  orders.py  pizzas.py
src/schemas/: orders.py  shared.py  snacks.py
src/schemas/tests/: test_shared_schemas.py
src/services/: order_service.py  orders_service.py  pizza_service.py  pizzas_service.py
src/services/tests/: test_order_service.py  test_pizza_service.py
